--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
+    "minimist": "^1.2.8",
     "ws": "^8.18.0"
   },
   "devDependencies": {
